--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,6 +22,8 @@
   </head>
   <body>
     <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment"></div>
+    <hr />
+    <h2 style="text-align: center; max-width: 600px; margin: 20px auto 20px auto;">These maps are here just for demoing purposes. On production you would find the report downloads and the UNCTAD footer.</h2>
     <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment_map_damage"></div>
     <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment_map_ntl"></div>
   </body>
