--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,9 +21,9 @@
     <link rel="shortcut icon" href="favicon.png" />
   </head>
   <body>
-    <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment"></div>
-    <!-- <h2 style="text-align: center; max-width: 600px; margin: 20px auto 20px auto;">These maps are here just for demoing purposes. On production you would find the report downloads and the UNCTAD footer.</h2> -->
-    <!-- <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment_map_damage"></div> -->
-    <!-- <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment_map_ntl"></div> -->
+    <!-- <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment"></div> -->
+    <h2 style="text-align: center; max-width: 600px; margin: 20px auto 20px auto;">These maps are here just for demoing purposes. On production you would find the report downloads and the UNCTAD footer.</h2>
+    <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment_map_damage"></div>
+    <div class="app-root-2024-palestine_rapid_assessment" id="app-root-2024-palestine_rapid_assessment_map_ntl"></div>
   </body>
 </html>
